test/asm/section-union-mismatch.err
error: section-union-mismatch.asm(2):
    Section already declared as fixed at different address $c000
FATAL: section-union-mismatch.asm(2):
    Cannot create section "test" (1 error)
