test/asm/section-union-mismatch.asm
SECTION UNION "test", WRAM0[$c000]
SECTION UNION "test", WRAM0[$c001]
